--- a/pricingOptimization/Top_20_cheapest_GPUs.ipynb
+++ b/pricingOptimization/Top_20_cheapest_GPUs.ipynb
@@ -22,18 +22,18 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/vkt1414/Cloud-Resources-Workflows/blob/main/pricingOptimization/Top_20_cheapest_GPUs.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/Cloud-Resources-Workflows/blob/main/pricingOptimization/Top_20_cheapest_GPUs.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "evveQJMmP50Z",
-        "outputId": "57fd8e57-9f81-4e5e-d953-dc5c1f2fd17d"
+        "outputId": "ac6d91ce-4c35-4ee7-c06d-2476281cd054"
       },
       "outputs": [
         {
@@ -51,31 +51,31 @@
           "data": {
             "text/plain": [
               "Region\n",
-              "us-west4                    74.58556\n",
-              "asia-east1                  82.29144\n",
-              "europe-west2                87.51313\n",
-              "asia-northeast1             88.30737\n",
-              "australia-southeast1        91.08940\n",
-              "asia-southeast1            102.80736\n",
-              "us-east4                   106.14200\n",
-              "us-west3                   108.68824\n",
-              "southamerica-east1         109.77448\n",
-              "us-east5                   110.15116\n",
-              "asia-south1                110.81108\n",
-              "europe-central2            111.49144\n",
-              "us-west1                   114.16616\n",
-              "us-east1                   114.16616\n",
-              "us-central1                114.16616\n",
-              "europe-west4               114.97500\n",
-              "asia-east2                 115.26116\n",
-              "asia-southeast2            117.35188\n",
-              "europe-west1               117.62928\n",
-              "northamerica-northeast1    118.87028\n",
+              "europe-west2          87.513130\n",
+              "asia-northeast1       92.150090\n",
+              "asia-southeast1      105.102480\n",
+              "us-east4             108.787520\n",
+              "us-east5             110.151160\n",
+              "asia-southeast2      118.426440\n",
+              "asia-northeast2      120.298160\n",
+              "europe-west6         122.129000\n",
+              "europe-west9         127.775346\n",
+              "europe-west8         127.775346\n",
+              "us-west4             128.263920\n",
+              "europe-west4         129.799840\n",
+              "us-south1            129.978369\n",
+              "europe-southwest1    129.978369\n",
+              "asia-east1           130.845200\n",
+              "us-central1          132.051160\n",
+              "us-west1             132.051160\n",
+              "us-east1             132.051160\n",
+              "europe-west1         137.584560\n",
+              "asia-northeast3      139.278160\n",
               "Name: N1, dtype: float64"
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 5
         }
       ],
       "source": [
@@ -94,22 +94,22 @@
         "df = df.loc[:, ~df.columns.str.contains(\"EXTENDED|CONFIDENTIAL|NETWORK|TPU\")]\n",
         "df.columns = df.columns.str.replace('CP-COMPUTEENGINE-|-PREEMPTIBLE', '', regex=True)\n",
         "\n",
-        "regions= ['asia-east1', 'asia-east2', \n",
+        "regions= ['asia-east1', 'asia-east2',\n",
         "          'asia-northeast1', 'asia-northeast2', 'asia-northeast3',\n",
         "          'asia-south1', 'asia-south2',\n",
-        "          'asia-southeast1', 'asia-southeast2', \n",
-        "          'australia-southeast1', 'australia-southeast2', \n",
-        "          'europe-central2', \n",
+        "          'asia-southeast1', 'asia-southeast2',\n",
+        "          'australia-southeast1', 'australia-southeast2',\n",
+        "          'europe-central2',\n",
         "          'europe-north1',\n",
         "          'europe-southwest1',\n",
-        "          'europe-west1', 'europe-west2','europe-west3','europe-west4','europe-west6','europe-west8','europe-west9','europe-west12',\n",
+        "          'europe-west1', 'europe-west2','europe-west3','europe-west4','europe-west6','europe-west8','europe-west9','europe-west12','europe-west10',\n",
         "          'northamerica-northeast1','northamerica-northeast2',\n",
         "          'southamerica-east1','southamerica-west1',\n",
         "          'us-central1',\n",
         "          'us-east1','us-east4','us-east5',\n",
         "          'us-south1',\n",
         "          'us-west1','us-west2','us-west3', 'us-west4',\n",
-        "          'me-central','me-west1']\n",
+        "          'me-central', 'me-central2','me-west1']\n",
         "\n",
         "df1 = df[df.index.isin(regions)]\n",
         "predefined=df1.loc[:, df1.columns.str.contains(\"PREDEFINED\")& ~df1.columns.str.startswith('PREDEFINED')]\n",
@@ -158,43 +158,43 @@
       ],
       "metadata": {
         "id": "rxdyTPeJXb3B",
-        "outputId": "7afb5fed-34e2-4478-e889-0b997bed7dc1",
+        "outputId": "ce77a615-0a33-4fd5-ac5c-7a7a620d59db",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "Region                      \n",
-              "us-west4                 E2     10.325120\n",
-              "us-central1              C2     13.834960\n",
-              "us-east1                 C2     13.834960\n",
-              "us-west1                 C2     13.834960\n",
-              "europe-central2          E2     14.500720\n",
-              "asia-east2               E2     15.119760\n",
-              "us-east5                 C2     15.365040\n",
-              "us-west4                 N1     15.966560\n",
+              "us-west4                 E2     12.082960\n",
+              "europe-southwest1        T2D    13.496240\n",
+              "northamerica-northeast2  N2     14.033520\n",
+              "us-east5                 C2     14.272960\n",
+              "europe-west9             T2D    15.616160\n",
+              "us-east5                 T2D    15.832240\n",
+              "us-west1                 C2     16.451280\n",
+              "us-east1                 C2     16.451280\n",
+              "us-central1              C2     16.451280\n",
+              "europe-central2          E2     16.679040\n",
               "me-west1                 C2     16.901544\n",
-              "europe-west4             C2     16.944760\n",
-              "asia-south2              N2     17.160840\n",
-              "northamerica-northeast2  N2     17.309760\n",
+              "                         C3     16.901544\n",
+              "asia-east2               E2     17.029440\n",
+              "europe-west12            N2D    17.362320\n",
+              "asia-south1              C2D    17.607600\n",
               "europe-west8             C2     17.823446\n",
               "europe-west9             C2     17.823446\n",
-              "europe-west12            C2     17.847098\n",
-              "europe-southwest1        C2     18.130747\n",
-              "us-south1                C2     18.130747\n",
-              "europe-west2             N2     18.372640\n",
-              "us-west1                 N2D    18.606240\n",
-              "us-east5                 T2D    18.606240\n",
+              "                         C3     17.823446\n",
+              "europe-west8             C3     17.823446\n",
+              "europe-west12            C3     17.847098\n",
               "dtype: float64"
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 3
         }
       ]
     },
@@ -208,56 +208,56 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xyz93YrtZ20h",
-        "outputId": "97a43819-cf00-438a-c07f-bf0958bba473"
+        "outputId": "1027b407-2f62-454d-99fd-5d6445d4e103"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "Region\n",
-              "asia-northeast1             50.98393\n",
               "europe-west2                50.98393\n",
-              "australia-southeast1        53.50900\n",
-              "asia-east1                  56.06400\n",
-              "us-west4                    58.61900\n",
-              "us-west3                    80.30000\n",
+              "asia-northeast1             50.98393\n",
+              "europe-west6                80.30000\n",
               "asia-northeast2             80.30000\n",
+              "us-east4                    80.30000\n",
               "us-east5                    80.30000\n",
               "asia-southeast1             80.30000\n",
-              "us-east4                    80.30000\n",
-              "europe-west6                80.30000\n",
-              "us-west2                    84.31500\n",
-              "us-west1                    84.31500\n",
-              "us-east1                    84.31500\n",
-              "us-central1                 84.31500\n",
-              "northamerica-northeast1     84.31500\n",
-              "europe-west4                84.31500\n",
-              "asia-south1                 84.31500\n",
               "asia-southeast2             87.52700\n",
-              "europe-west1                88.33000\n",
-              "asia-northeast3             88.33000\n",
-              "europe-west3                88.33000\n",
-              "southamerica-east1          88.33000\n",
-              "asia-east2                  92.34500\n",
-              "europe-central2             92.34500\n",
-              "europe-north1               92.34500\n",
-              "me-west1                    92.78300\n",
-              "europe-west9                93.14800\n",
               "europe-west8                93.14800\n",
+              "europe-west9                93.14800\n",
               "us-south1                   94.75400\n",
               "europe-southwest1           94.75400\n",
               "asia-south2                 96.36000\n",
+              "us-east1                   102.20000\n",
+              "us-central1                102.20000\n",
+              "us-west1                   102.20000\n",
+              "asia-east1                 102.20000\n",
+              "europe-west4               102.20000\n",
+              "europe-west1               102.20000\n",
               "europe-west12              103.58700\n",
+              "asia-northeast3            108.04000\n",
+              "us-west4                   108.04000\n",
+              "me-west1                   112.42000\n",
+              "northamerica-northeast1    112.42000\n",
               "australia-southeast2       114.02600\n",
               "southamerica-west1         114.82900\n",
+              "europe-west3               119.72000\n",
+              "europe-central2            119.72000\n",
+              "asia-south1                119.72000\n",
+              "us-west2                   119.72000\n",
+              "us-west3                   119.72000\n",
+              "australia-southeast1       128.48000\n",
+              "asia-east2                 128.48000\n",
+              "southamerica-east1         140.16000\n",
+              "europe-north1                    NaN\n",
               "northamerica-northeast2          NaN\n",
               "Name: T4, dtype: float64"
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 2
         }
       ]
     },
