fix branch reference to notebooks2 in colab link

--- a/Notebooks/Totalsegmentator/postProcessingExtractPerframe.ipynb
+++ b/Notebooks/Totalsegmentator/postProcessingExtractPerframe.ipynb
@@ -3,32 +3,32 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/Cloud-Resources-Workflows/blob/notebooks/Notebooks/Totalsegmentator/postProcessingExtractPerframe.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/Cloud-Resources-Workflows/blob/notebooks2/Notebooks/Totalsegmentator/postProcessingExtractPerframe.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##**This notebook extracts the DICOM attribute PerFrameFunctionalGroupsSequence from DICOM SEG Objects. It takes destinations of the SEG files, downloads them, decompress, and extract the DICOM attribute and flattens it**"
-      ],
+      "id": "kdOyoySwehlv",
       "metadata": {
         "id": "kdOyoySwehlv"
       },
-      "id": "kdOyoySwehlv"
+      "source": [
+        "##**This notebook extracts the DICOM attribute PerFrameFunctionalGroupsSequence from DICOM SEG Objects. It takes destinations of the SEG files, downloads them, decompress, and extract the DICOM attribute and flattens it**"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "###**Note: Since we cannot create service accounts on Terra GCP project, files are first copied (only possible using the credentials when logged in interactively with gcloud auth login) from Terra's bucket to another bucket in a project where we can create service accounts.**"
-      ],
+      "id": "OWJEBSRsjqa6",
       "metadata": {
         "id": "OWJEBSRsjqa6"
       },
-      "id": "OWJEBSRsjqa6"
+      "source": [
+        "###**Note: Since we cannot create service accounts on Terra GCP project, files are first copied (only possible using the credentials when logged in interactively with gcloud auth login) from Terra's bucket to another bucket in a project where we can create service accounts.**"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -130,17 +130,36 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "###**Local Testing**                                                 \n",
-        "While testing locally uncomment the below cell but comment out all cells after that"
-      ],
+      "id": "nbzivnkRnb_B",
       "metadata": {
         "id": "nbzivnkRnb_B"
       },
-      "id": "nbzivnkRnb_B"
+      "source": [
+        "###**Local Testing**                                                 \n",
+        "While testing locally uncomment the below cell but comment out all cells after that"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "surBU_pLnf4u",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "surBU_pLnf4u",
+        "outputId": "a5197c4b-78b4-4d9c-c6cf-4281bfddd549"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "files successfully decompressed\n",
+            "Compressed 10412470 bytes into 1003990 bytes ==> 9.64%\n"
+          ]
+        }
+      ],
       "source": [
         "# !wget -q https://github.com/ImagingDataCommons/Cloud-Resources-Workflows/raw/notebooks/sampleManifests/dicomsegAndRadiomicsSR_DICOMsegFiles.tar.lz4\n",
         "# combined_data = []\n",
@@ -220,36 +239,17 @@
         "#     !lz4 --rm 'perFrameFunctionalGroupSequence.csv' 'perFrameFunctionalGroupSequence.csv.lz4'\n",
         "\n",
         "#     logging.info('Processing complete.')"
-      ],
-      "metadata": {
-        "id": "surBU_pLnf4u",
-        "outputId": "a5197c4b-78b4-4d9c-c6cf-4281bfddd549",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "surBU_pLnf4u",
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "files successfully decompressed\n",
-            "Compressed 10412470 bytes into 1003990 bytes ==> 9.64%\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "###**Authenticate with service account so we can download files from a non Terra bucket**"
-      ],
+      "id": "vecx0peulm-I",
       "metadata": {
         "id": "vecx0peulm-I"
       },
-      "id": "vecx0peulm-I"
+      "source": [
+        "###**Authenticate with service account so we can download files from a non Terra bucket**"
+      ]
     },
     {
       "cell_type": "code",
@@ -278,13 +278,13 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "###**Extract PerFrameFunctionalGroupsSequence**"
-      ],
+      "id": "aAdNsOPal8Cv",
       "metadata": {
         "id": "aAdNsOPal8Cv"
       },
-      "id": "aAdNsOPal8Cv"
+      "source": [
+        "###**Extract PerFrameFunctionalGroupsSequence**"
+      ]
     },
     {
       "cell_type": "code",
@@ -403,8 +403,8 @@
   "metadata": {
     "celltoolbar": "Tags",
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
