use new colors and update the way dcmqi config is generated
fix merge error

no longer needed

--- a/Notebooks/Totalsegmentator/dicomsegAndRadiomicsSR_Notebook.ipynb
+++ b/Notebooks/Totalsegmentator/dicomsegAndRadiomicsSR_Notebook.ipynb
@@ -422,8 +422,8 @@
         "  os.remove(f'{curr_dir}/map_to_binary.py')\n",
         "except OSError:\n",
         "  pass\n",
-        "!wget -q https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/config_fix/configs/TotalSegmentator/dicomseg_metadata_whole_slicerAsRef.json\n",
-        "!wget -q https://raw.githubusercontent.com/wasserth/TotalSegmentator/master/totalsegmentator/map_to_binary.py\n",
+        "!wget -q https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/config_fix2/configs/TotalSegmentator/dicomseg_metadata_whole_slicerAsRef.json\n",
+        "!wget -q https://raw.githubusercontent.com/wasserth/TotalSegmentator/v2.0.5/totalsegmentator/map_to_binary.py\n",
         "import map_to_binary"
       ]
     },
@@ -441,7 +441,7 @@
       "outputs": [],
       "source": [
         "totalsegmentator_segments_code_mapping_df = pd.read_csv(\n",
-        "    \"https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/config_fix/configs/TotalSegmentator/TotalSegmentator%20v1%20SCT%20mapping%20-%20total.csv\",\n",
+        "    \"https://raw.githubusercontent.com/wasserth/TotalSegmentator/1691bb8cd27a9ab78c2da3acef4dddf677c7dd24/resources/totalsegmentator_snomed_mapping.csv\",\n",
         "    index_col=[0],\n",
         "    dtype={\"SegmentedPropertyTypeModifierCodeSequence.CodeValue\": str},\n",
         ")\n",
