adjust reading csv parameters to snomed map csv file

--- a/Notebooks/Totalsegmentator/dicomsegAndRadiomicsSR_Notebook.ipynb
+++ b/Notebooks/Totalsegmentator/dicomsegAndRadiomicsSR_Notebook.ipynb
@@ -3,11 +3,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/Cloud-Resources-Workflows/blob/notebooks2/Notebooks/Totalsegmentator/dicomsegAndRadiomicsSR_Notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/Cloud-Resources-Workflows/blob/config_fix2/Notebooks/Totalsegmentator/dicomsegAndRadiomicsSR_Notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -272,11 +272,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "RtCgnasti8-l",
-        "outputId": "c1b4883e-4f78-480a-9b2c-05f81a0fd8bc"
+        "id": "RtCgnasti8-l"
       },
       "outputs": [],
       "source": [
@@ -356,11 +352,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "1n_xTJNaD-cE",
-        "outputId": "7371e0e1-de0e-4e6b-fe5b-12c5cdf1d904"
+        "id": "1n_xTJNaD-cE"
       },
       "outputs": [],
       "source": [
@@ -385,12 +377,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 933
-        },
-        "id": "9BCGMHYhMruy",
-        "outputId": "2a9fcd79-4ce7-4777-b33f-0b2fd6f72f4a"
+        "id": "9BCGMHYhMruy"
       },
       "outputs": [],
       "source": [
@@ -431,23 +418,17 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 982
-        },
-        "id": "6E0y_02qWRU6",
-        "outputId": "154709f5-46cf-4990-ed87-4fc72b323b66"
+        "id": "6E0y_02qWRU6"
       },
       "outputs": [],
       "source": [
         "totalsegmentator_segments_code_mapping_df = pd.read_csv(\n",
         "    \"https://raw.githubusercontent.com/wasserth/TotalSegmentator/1691bb8cd27a9ab78c2da3acef4dddf677c7dd24/resources/totalsegmentator_snomed_mapping.csv\",\n",
-        "    index_col=[0],\n",
         "    dtype={\"SegmentedPropertyTypeModifierCodeSequence.CodeValue\": str},\n",
         ")\n",
         "totalsegmentator_radiomics_features_code_mapping_df = pd.read_csv(\n",
         "    \"https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/fix-radiomics-features-units/configs/TotalSegmentator/radiomicsFeaturesMaps.csv\",\n",
-        "    index_col=[0],\n",
+        "    index_col=[0]\n",
         ")\n",
         "totalsegmentator_radiomics_features_code_mapping_df\n"
       ]
@@ -1642,12 +1623,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "id": "w_-jEmCgKJBe",
-        "outputId": "6082f25f-6fba-4ebe-d7aa-8ab65e495a77"
+        "id": "w_-jEmCgKJBe"
       },
       "outputs": [],
       "source": [
@@ -1767,8 +1743,8 @@
   "metadata": {
     "celltoolbar": "Tags",
     "colab": {
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
