fix manifest references, use gh release attachment for binaries

--- a/Notebooks/Totalsegmentator/dicomsegAndRadiomicsSR_Notebook.ipynb
+++ b/Notebooks/Totalsegmentator/dicomsegAndRadiomicsSR_Notebook.ipynb
@@ -3,11 +3,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/Cloud-Resources-Workflows/blob/config_fix2/Notebooks/Totalsegmentator/dicomsegAndRadiomicsSR_Notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/Cloud-Resources-Workflows/blob/main/Notebooks/Totalsegmentator/dicomsegAndRadiomicsSR_Notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -25,7 +25,7 @@
         "id": "WAtR3bhCl_-x"
       },
       "source": [
-        "<img src=\"https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/notebooks2/images/dicom_seg_and_radiomics_sr.png\">"
+        "<img src=\"https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/main/images/dicom_seg_and_radiomics_sr.png\">"
       ]
     },
     {
@@ -87,7 +87,7 @@
         "* A sample file containing the segmentation maps and corresponding csv manifest is provided for convenience can be downloaded by uncommenting and running the cells in \"For local testing\"\n",
         "* The CSV manifest expects a SeriesInstanceUID and s5cmd url to download the entire series. The manifest may contain any other metadata if needed.\n",
         "\n",
-        "<img src=\"https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/notebooks2/images/dicom_seg_and_radiomics_sr_manifest.png\">\n",
+        "<img src=\"https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/main/images/dicom_seg_and_radiomics_sr_manifest.png\">\n",
         "\n",
         "* Run each cell to install the packages and to decompress the segmentation maps, and to download the CT data from IDC, convert to NIfTI, write DICOM Seg and DICOM SR files saved in lz4 compressed format\n",
         "\n",
@@ -331,10 +331,10 @@
         "# except OSError:\n",
         "#   pass\n",
         "\n",
-        "# !wget -q https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/notebooks/sampleManifests/batch_1.csv\n",
+        "# !wget -q https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/main/sampleManifests/batch_1.csv\n",
         "# csvFilePath = glob.glob('*.csv')[0]\n",
         "\n",
-        "# !wget -q https://github.com/ImagingDataCommons/Cloud-Resources-Workflows/raw/notebooks/sampleManifests/inferenceNiftiFiles.tar.lz4\n",
+        "# !wget -q https://github.com/ImagingDataCommons/Cloud-Resources-Workflows/releases/download/v1.0.0/inferenceNiftiFiles.tar.lz4\n",
         "# #Get the file path of the inferenceNiftiFiles\n",
         "# inferenceNiftiFilePath=glob.glob('*.lz4')[0]"
       ]
@@ -409,7 +409,7 @@
         "  os.remove(f'{curr_dir}/map_to_binary.py')\n",
         "except OSError:\n",
         "  pass\n",
-        "!wget -q https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/config_fix2/configs/TotalSegmentator/dicomseg_metadata_whole_slicerAsRef.json\n",
+        "!wget -q https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/main/configs/TotalSegmentator/dicomseg_metadata_whole_slicerAsRef.json\n",
         "!wget -q https://raw.githubusercontent.com/wasserth/TotalSegmentator/v2.0.5/totalsegmentator/map_to_binary.py\n",
         "import map_to_binary"
       ]
@@ -427,7 +427,7 @@
         "    dtype={\"SegmentedPropertyTypeModifierCodeSequence.CodeValue\": str},\n",
         ")\n",
         "totalsegmentator_radiomics_features_code_mapping_df = pd.read_csv(\n",
-        "    \"https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/fix-radiomics-features-units/configs/TotalSegmentator/radiomicsFeaturesMaps.csv\",\n",
+        "    \"https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/main/configs/TotalSegmentator/radiomicsFeaturesMaps.csv\",\n",
         "    index_col=[0]\n",
         ")\n",
         "totalsegmentator_radiomics_features_code_mapping_df\n"
@@ -1743,8 +1743,8 @@
   "metadata": {
     "celltoolbar": "Tags",
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
