--- a/Notebooks/Totalsegmentator/endToEndTotalSegmentatorNotebook.ipynb
+++ b/Notebooks/Totalsegmentator/endToEndTotalSegmentatorNotebook.ipynb
@@ -7,7 +7,7 @@
         "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/Cloud-Resources-Workflows/blob/notebooks2/Notebooks/Totalsegmentator/endToEndTotalSegmentatorNotebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/Cloud-Resources-Workflows/blob/main/Notebooks/Totalsegmentator/endToEndTotalSegmentatorNotebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -23,7 +23,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<img src=\"https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/notebooks2/images/endtoend.png\">"
+        "<img src=\"https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/main/images/endtoend.jpg\">"
       ]
     },
     {
@@ -66,7 +66,7 @@
         "*  A sample manifest is provided for convenience can be downloaded by uncommenting and running the cells in \"For local testing\"\n",
         "*  The CSV manifest expects a SeriesInstanceUID and s5cmd url (which contains the destination directory, here it's set to 'idc_data') to download the entire series. The manifest may contain any other metadata if needed.\n",
         "\n",
-        "<img src=\"https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/notebooks2/images/endtoend_manifest.png\">\n",
+        "<img src=\"https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/main/images/endtoend_manifest.png\">\n",
         "\n",
         "* Run each cell to install the packages and to download the data from IDC, convert to NIfTI saved in lz4 compressed format\n",
         "\n",
@@ -78,7 +78,7 @@
         "* Docker images can be found @ https://hub.docker.com/repository/docker/imagingdatacommons/download_convert_inference_totalseg/tags\n",
         "* The link to dockerfile along with git commit hash used for building the docker image can be found in one of the layers called 'LABEL'\n",
         "\n",
-        "<img src=\"https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/notebooks2/images/endtoend_docker.png\">\n",
+        "<img src=\"https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/main/images/endtoend_docker.png\">\n",
         "\n",
         "* We use a python package called Papermill, that can run the notebook with out having to convert it to python script. This allows us maintain one copy of code instead of two.\n",
         "* To use papermill, download this notebook and tag the cell under 'Parameters for Papermill\" as parameters using jupyternotebook or jupyterlab as instructed @ https://papermill.readthedocs.io/en/latest/usage-parameterize.html#designate-parameters-for-a-cell\n",
@@ -330,7 +330,7 @@
         "# except OSError:\n",
         "#     pass\n",
         "\n",
-        "# !wget -q https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/notebooks/sampleManifests/batch_1.csv\n",
+        "# !wget -q https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/main/sampleManifests/batch_1.csv\n",
         "# csvFilePath = glob.glob(\"*.csv\")[0]\n"
       ]
     },
@@ -400,8 +400,8 @@
         "  os.remove(f'{curr_dir}/map_to_binary.py')\n",
         "except OSError:\n",
         "  pass\n",
-        "!wget -q https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/config_fix/configs/TotalSegmentator/dicomseg_metadata_whole_slicerAsRef.json\n",
-        "!wget -q https://raw.githubusercontent.com/wasserth/TotalSegmentator/master/totalsegmentator/map_to_binary.py\n",
+        "!wget -q https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/main/configs/TotalSegmentator/dicomseg_metadata_whole_slicerAsRef.json\n",
+        "!wget -q https://raw.githubusercontent.com/wasserth/TotalSegmentator/v2.0.5/totalsegmentator/map_to_binary.py\n",
         "import map_to_binary"
       ]
     },
@@ -419,13 +419,12 @@
       "outputs": [],
       "source": [
         "totalsegmentator_segments_code_mapping_df = pd.read_csv(\n",
-        "    \"https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/config_fix/configs/TotalSegmentator/TotalSegmentator%20v1%20SCT%20mapping%20-%20total.csv\",\n",
-        "    index_col=[0],\n",
+        "    \"https://raw.githubusercontent.com/wasserth/TotalSegmentator/1691bb8cd27a9ab78c2da3acef4dddf677c7dd24/resources/totalsegmentator_snomed_mapping.csv\",\n",
         "    dtype={\"SegmentedPropertyTypeModifierCodeSequence.CodeValue\": str},\n",
         ")\n",
         "totalsegmentator_radiomics_features_code_mapping_df = pd.read_csv(\n",
-        "    \"https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/fix-radiomics-features-units/configs/TotalSegmentator/radiomicsFeaturesMaps.csv\",\n",
-        "    index_col=[0],\n",
+        "    \"https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/main/configs/TotalSegmentator/radiomicsFeaturesMaps.csv\",\n",
+        "    index_col=[0]\n",
         ")\n",
         "totalsegmentator_radiomics_features_code_mapping_df\n"
       ]
