--- a/Notebooks/Totalsegmentator/inferenceTotalSegmentatorNotebook.ipynb
+++ b/Notebooks/Totalsegmentator/inferenceTotalSegmentatorNotebook.ipynb
@@ -7,7 +7,7 @@
         "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/Cloud-Resources-Workflows/blob/notebooks2/Notebooks/Totalsegmentator/inferenceTotalSegmentatorNotebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/Cloud-Resources-Workflows/blob/main/Notebooks/Totalsegmentator/inferenceTotalSegmentatorNotebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -38,7 +38,7 @@
         "id": "toVsdH7JIV8H"
       },
       "source": [
-        "<img src=\"https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/notebooks2/images/inference.png\">"
+        "<img src=\"https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/main/images/inference.png\">"
       ]
     },
     {
@@ -92,7 +92,7 @@
         "* Docker images can be found @ https://hub.docker.com/repository/docker/imagingdatacommons/inference_totalseg/tags\n",
         "* The link to dockerfile along with git commit hash used for building the docker image can be found in one of the layers called 'LABEL'\n",
         "\n",
-        "<img src=\"https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/notebooks2/images/inference_docker.png\">\n",
+        "<img src=\"https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/main/images/inference_docker.png\">\n",
         "\n",
         "* We use a python package called Papermill, that can run the notebook with out having to convert it to python script. This allows us maintain one copy of code instead of two.\n",
         "* To use papermill, download this notebook and tag the cell under 'Parameters for Papermill\" as parameters using jupyternotebook or jupyterlab as instructed @ https://papermill.readthedocs.io/en/latest/usage-parameterize.html#designate-parameters-for-a-cell\n",
@@ -263,28 +263,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "JifIJvxZ41OC",
-        "outputId": "bee79507-1340-40a5-de13-ff1a679dd4c5"
-      },
-      "outputs": [],
-      "source": [
-        "# !pip install gdown"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "u3QXHGDp2htr",
         "outputId": "98ec3fb4-0a80-4651-98ce-c6055d7909aa"
       },
       "outputs": [],
       "source": [
-        "# !gdown \"https://drive.google.com/uc?id=1LsRPn_gTWUwVZwrcnSllogTaw8MW2d2M\"\n",
-        "# niftiFilePath= glob.glob(\"*.lz4\")[0]"
+        "# !wget -q https://github.com/ImagingDataCommons/Cloud-Resources-Workflows/releases/download/v1.0.0/downloadDicomAndConvertNiftiFiles.tar.lz4\n",
+        "# niftiFilePath=glob.glob('*.lz4')[0]"
       ]
     },
     {
