--- a/Notebooks/Totalsegmentator/postProcessingExtractPerframe.ipynb
+++ b/Notebooks/Totalsegmentator/postProcessingExtractPerframe.ipynb
@@ -7,7 +7,7 @@
         "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/Cloud-Resources-Workflows/blob/notebooks2/Notebooks/Totalsegmentator/postProcessingExtractPerframe.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/Cloud-Resources-Workflows/blob/main/Notebooks/Totalsegmentator/postProcessingExtractPerframe.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -152,7 +152,7 @@
       },
       "outputs": [],
       "source": [
-        "# !wget -q https://github.com/ImagingDataCommons/Cloud-Resources-Workflows/raw/notebooks/sampleManifests/dicomsegAndRadiomicsSR_DICOMsegFiles.tar.lz4\n",
+        "# !wget -q https://github.com/ImagingDataCommons/Cloud-Resources-Workflows/releases/download/v1.0.0/dicomsegAndRadiomicsSR_DICOMsegFiles.tar.lz4\n",
         "# combined_data = []\n",
         "# try:\n",
         "#         try:\n",
